--- a/indext.html
+++ b/indext.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&family=Roboto+Condensed&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>assinment</h1>
+
+<body >
+    <section class="display-flex">
+        <div  class="half-width">
+            <h1 > <span class="h-color">Skip</span>  The Diet,Just Eat Healthy With Food Network</h1> 
+            <h4 class="h4-color">Imagine you don't need a diet because we provide healthy and delicious food for you</h4><br>
+            <a class="target-blank" target="blank" href="google.com">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img src="img/female/Group 8425.png" alt="">
+        </div>
+        
+    </section>
 </body>
+
 </html>
