--- a/indext.html
+++ b/indext.html
@@ -96,16 +96,30 @@
 
 
         </div>
+    </section> 
 
+    <section>
 
-
-
-
-
-
+        <div class="width-100">
+            <div class="section-4-div">
+                <div class="div-2-sectio-4">
+                    <h1>700k</h1>
+                    <h4>Youtube Subscriber</h4>
+                </div>
+                <div class="div-2-sectio-4">
+                    <h1>2.4M</h1>
+                    <h4>Instagram Followers</h4>
+                </div>
+                <div class="div-2-sectio-4">
+                    <h1>100l</h1>
+                    <h4>Dribble Shot Likes</h4>
+                </div>
+            </div>
+        </div>
 
 
     </section>
+
 </body>
 
 </html>
