--- a/indext.html
+++ b/indext.html
@@ -96,7 +96,7 @@
 
 
         </div>
-    </section> 
+    </section>
 
     <section>
 
@@ -111,13 +111,20 @@
                     <h4>Instagram Followers</h4>
                 </div>
                 <div class="div-2-sectio-4">
-                    <h1>100l</h1>
+                    <h1>100k</h1>
                     <h4>Dribble Shot Likes</h4>
                 </div>
             </div>
         </div>
+    </section>
 
-
+    <section>
+        <div class="section-5-div">
+            <div class="section-div-2">
+                <h2><span class="span-food">FOOD</span> NETWORK</h2>
+                <h4>Eat healthy to live healthy.Live healthy to live happy</h4>
+            </div>
+        </div>
     </section>
 
 </body>
