--- a/indext.html
+++ b/indext.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food Network</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&family=Roboto+Condensed&display=swap"
@@ -15,6 +15,20 @@
 </head>
 
 <body>
+
+    <section id="nav-bar">
+        <ul class="nav-bar">
+            <li><a href="#home ">Home</a></li>
+            <li><a href="#home ">News</a></li>
+            <li><a href="#home ">Contact</a></li>
+            <li class="flot-right"><a href="#home ">About</a></li>
+        </ul>
+    </section>
+
+
+
+
+
     <section class="display-flex">
         <div class="half-width">
             <h1> <span class="h-color">Skip</span> The Diet,Just Eat Healthy With Food Network</h1>
